--- a/langchin_rag.ipynb
+++ b/langchin_rag.ipynb
@@ -3957,7 +3957,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "deep_learning",
    "language": "python",
    "name": "python3"
   },
@@ -3971,7 +3971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
