--- a/부동산챗봇.ipynb
+++ b/부동산챗봇.ipynb
@@ -206,6 +206,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rental_prompt = \"\"\"\n",
+    "사용 가능한 테이블 스키마:\n",
+    "{property_rental}\n",
+    "\n",
+    "당신은 SQL 전문가입니다. \n",
+    "데이터베이스는 {dialect} 방언을 사용합니다.\n",
+    "\n",
+    "다음 규칙을 따라주세요:\n",
+    "1. 한국어로 응답해주세요.\n",
+    "2. SQL 쿼리를 작성할 때는 명확하고 효율적이어야 합니다.\n",
+    "3. 결과는 최대 {top_k}개까지만 보여주세요.\n",
+    "4. 금액에 관련된 쿼리를 작성할 때는 쉼표(,)를 제거하고 숫자로 변환해야 합니다.\n",
+    "5. 에러가 발생하면 원인을 설명하고 수정된 쿼리를 제시해주세요.\n",
+    "6. rental_type이 30051B1는 전세입니다.\n",
+    "7. rental_type이 30051B2는 월세입니다.\n",
+    "\n",
+    "예를 들어서 사용자 응답이 '서울시 강남구 1억 이하 전세를 추천해줘'라고 온다면\n",
+    "\n",
+    "SELECT \n",
+    "    pl.sigungu,\n",
+    "    pi.description,\n",
+    "    pr.deposit as \"보증금(만원)\",\n",
+    "    pl.latitude,\n",
+    "    pl.longitude\n",
+    "FROM property_rentals pr\n",
+    "JOIN property_info pi ON pr.property_id = pi.property_id\n",
+    "JOIN property_locations pl ON pi.location_id = pl.location_id\n",
+    "WHERE pl.sigungu LIKE '%강남구%'\n",
+    "AND pr.rental_type = '30051B1'\n",
+    "AND CAST(REPLACE(pr.deposit, ',', '') AS DECIMAL) <= 10000;\n",
+    "\n",
+    "이런식으로 쿼리를 짜서 나온 값 중에\n",
+    "너가 생각하기에 추천을 할 만할 매물들을 5개 추천해줘\n",
+    "\n",
+    "그리고 답변하기 전에 이 답이 맞는지 확인해줘줘.\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [
@@ -624,6 +669,40 @@
     }
    ],
    "source": [
+    "print(\"\\n강남구 데이터 현황:\")\n",
+    "print(query_tool.run(test_query))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_community.tools.sql_database.tool import (\n",
+    "    InfoSQLDatabaseTool,\n",
+    "    ListSQLDatabaseTool,\n",
+    "    QuerySQLCheckerTool,\n",
+    "    QuerySQLDataBaseTool,\n",
+    ")\n",
+    "\n",
+    "query_tool = QuerySQLDataBaseTool(db=db)\n",
+    "test_query = \"\"\"\n",
+    "SELECT \n",
+    "    pl.sigungu,\n",
+    "    pi.description,\n",
+    "    pr.deposit as \"보증금(만원)\",\n",
+    "    pl.latitude,\n",
+    "    pl.longitude\n",
+    "FROM property_rentals pr\n",
+    "JOIN property_info pi ON pr.property_id = pi.property_id\n",
+    "JOIN property_locations pl ON pi.location_id = pl.location_id\n",
+    "WHERE pl.sigungu LIKE '%강남구%'\n",
+    "AND pr.rental_type = '30051B1'\n",
+    "AND CAST(REPLACE(pr.deposit, ',', '') AS DECIMAL) <= 10000;\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
     "print(\"\\n강남구 데이터 현황:\")\n",
     "print(query_tool.run(test_query))"
    ]
