--- a/부동산챗봇_langchain.ipynb
+++ b/부동산챗봇_langchain.ipynb
@@ -50,7 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langsmith import Client\n",
+    "client = Client()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +95,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: langsmith in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (0.1.136)\n",
+      "Collecting langsmith\n",
+      "  Downloading langsmith-0.2.6-py3-none-any.whl.metadata (14 kB)\n",
+      "Requirement already satisfied: openai in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (1.52.1)\n",
+      "Collecting openai\n",
+      "  Using cached openai-1.58.1-py3-none-any.whl.metadata (27 kB)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from langsmith) (0.27.2)\n",
+      "Requirement already satisfied: orjson<4.0.0,>=3.9.14 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from langsmith) (3.10.10)\n",
+      "Requirement already satisfied: pydantic<3,>=1 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from langsmith) (2.9.2)\n",
+      "Requirement already satisfied: requests<3,>=2 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from langsmith) (2.32.3)\n",
+      "Requirement already satisfied: requests-toolbelt<2.0.0,>=1.0.0 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from langsmith) (1.0.0)\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from openai) (4.6.2.post1)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: jiter<1,>=0.4.0 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from openai) (0.6.1)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from openai) (1.3.1)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from openai) (4.66.5)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.11 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from openai) (4.12.2)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+      "Requirement already satisfied: exceptiongroup>=1.0.2 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+      "Requirement already satisfied: certifi in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith) (2024.8.30)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from httpx<1,>=0.23.0->langsmith) (1.0.6)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith) (0.14.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from pydantic<3,>=1->langsmith) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.23.4 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from pydantic<3,>=1->langsmith) (2.23.4)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from requests<3,>=2->langsmith) (3.3.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from requests<3,>=2->langsmith) (2.2.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\anaconda3\\envs\\nlp\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n",
+      "Downloading langsmith-0.2.6-py3-none-any.whl (325 kB)\n",
+      "Using cached openai-1.58.1-py3-none-any.whl (454 kB)\n",
+      "Installing collected packages: openai, langsmith\n",
+      "  Attempting uninstall: openai\n",
+      "    Found existing installation: openai 1.52.1\n",
+      "    Uninstalling openai-1.52.1:\n",
+      "      Successfully uninstalled openai-1.52.1\n",
+      "  Attempting uninstall: langsmith\n",
+      "    Found existing installation: langsmith 0.1.136\n",
+      "    Uninstalling langsmith-0.1.136:\n",
+      "      Successfully uninstalled langsmith-0.1.136\n",
+      "Successfully installed langsmith-0.2.6 openai-1.58.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "langchain 0.3.4 requires langsmith<0.2.0,>=0.1.17, but you have langsmith 0.2.6 which is incompatible.\n",
+      "langchain-community 0.3.3 requires langsmith<0.2.0,>=0.1.125, but you have langsmith 0.2.6 which is incompatible.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install -U langsmith openai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "property_rental = db.get_table_info(table_names=[\"property_rentals\", \"property_info\", \"property_locations\"])\n",
+    "\n",
+    "    rental_prompt = \"\"\"\n",
+    "    질문:\n",
+    "    {questions}\n",
+    "\n",
+    "    사용 가능한 테이블 스키마:\n",
+    "    {property_rental}\n",
+    "\n",
+    "    당신은 SQL 전문가입니다. \n",
+    "    데이터베이스는 {dialect} 방언을 사용합니다.\n",
+    "\n",
+    "    다음 규칙을 따라주세요:\n",
+    "    1. 한국어로 응답해주세요.\n",
+    "    2. SQL 쿼리를 작성할 때는 명확하고 효율적이어야 합니다.\n",
+    "    3. 결과는 최대 {top_k}개까지만 보여주세요.\n",
+    "    4. 금액에 관련된 쿼리를 작성할 때는 쉼표(,)를 제거하고 숫자로 변환해야 합니다.\n",
+    "    5. 에러가 발생하면 원인을 설명하고 수정된 쿼리를 제시해주세요.\n",
+    "    6. rental_type이 30051B1는 전세입니다.\n",
+    "    7. rental_type이 30051B2는 월세입니다.\n",
+    "\n",
+    "    SELECT \n",
+    "        pl.sigungu,\n",
+    "        pi.description,\n",
+    "        pr.deposit as \"보증금(만원)\",\n",
+    "        pl.latitude,\n",
+    "        pl.longitude\n",
+    "    FROM property_rentals pr\n",
+    "    JOIN property_info pi ON pr.property_id = pi.property_id\n",
+    "    JOIN property_locations pl ON pi.location_id = pl.location_id\n",
+    "    WHERE pl.sigungu LIKE '%강남구%'\n",
+    "    AND pr.rental_type = '30051B1'\n",
+    "    AND CAST(REPLACE(pr.deposit, ',', '') AS DECIMAL) <= 10000;\n",
+    "\n",
+    "    이런식으로 쿼리를 짜줘.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    prompt=rental_prompt.format(\n",
+    "        dialect=\"SQLite\",\n",
+    "        top_k=5, \n",
+    "        property_rental=property_rental,\n",
+    "        questions=state[\"questions\"]\n",
+    "    )\n",
+    "\n",
+    "    response = llm(messages=[{\"role\": \"system\", \"content\": prompt}])\n",
+    "\n",
+    "    llm_query = response.content\n",
+    "\n",
+    "    tool = QuerySQLDataBaseTool(db=db)\n",
+    "\n",
+    "    # SQL 쿼리 실행\"\n",
+    "    results = tool._run(llm_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,23 +229,23 @@
      "text": [
       "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
-      "금천구에서 월세 50이하 추천해줘\n",
+      "강남구 집값 저렴한 곳을 알려줘\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  sql_db_query_checker (call_IwUxDTDZXwUtzpTB2wHw3xDh)\n",
-      " Call ID: call_IwUxDTDZXwUtzpTB2wHw3xDh\n",
+      "  sql_db_query_checker (call_OcahcR99GE0QWlpo0Spomqhv)\n",
+      " Call ID: call_OcahcR99GE0QWlpo0Spomqhv\n",
       "  Args:\n",
       "    query: SELECT \n",
       "    l.sigungu,\n",
       "    r.building_name, \n",
-      "    rt.monthly_rent as \"월세(만원)\",\n",
+      "    s.price as \"가격(만원)\",\n",
       "    r.exclusive_area as \"전용면적(㎡)\"\n",
-      "FROM rental_transaction rt\n",
-      "JOIN real_estate_info r ON rt.property_id = r.property_id\n",
+      "FROM sale_transaction s\n",
+      "JOIN real_estate_info r ON s.property_id = r.property_id\n",
       "JOIN location l ON r.location_id = l.location_id\n",
-      "WHERE l.sigungu LIKE '%금천구%'\n",
-      "AND rt.rental_type = '월세'\n",
-      "AND CAST(REPLACE(rt.monthly_rent, ',', '') AS DECIMAL) <= 50;\n",
+      "WHERE l.sigungu LIKE '%강남구%'\n",
+      "ORDER BY s.price ASC\n",
+      "LIMIT 5;\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: sql_db_query_checker\n",
       "\n",
@@ -118,60 +253,60 @@
       "SELECT \n",
       "    l.sigungu,\n",
       "    r.building_name, \n",
-      "    rt.monthly_rent as \"월세(만원)\",\n",
+      "    s.price as \"가격(만원)\",\n",
       "    r.exclusive_area as \"전용면적(㎡)\"\n",
-      "FROM rental_transaction rt\n",
-      "JOIN real_estate_info r ON rt.property_id = r.property_id\n",
+      "FROM sale_transaction s\n",
+      "JOIN real_estate_info r ON s.property_id = r.property_id\n",
       "JOIN location l ON r.location_id = l.location_id\n",
-      "WHERE l.sigungu LIKE '%금천구%'\n",
-      "AND rt.rental_type = '월세'\n",
-      "AND CAST(REPLACE(rt.monthly_rent, ',', '') AS DECIMAL) <= 50;\n",
+      "WHERE l.sigungu LIKE '%강남구%'\n",
+      "ORDER BY s.price ASC\n",
+      "LIMIT 5;\n",
       "```\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  sql_db_query (call_Ce8wwJJfdz0ZJJr5nY5fkxSt)\n",
-      " Call ID: call_Ce8wwJJfdz0ZJJr5nY5fkxSt\n",
+      "  sql_db_query (call_KahVo5ooEL0GYcogFoS8ePBv)\n",
+      " Call ID: call_KahVo5ooEL0GYcogFoS8ePBv\n",
       "  Args:\n",
       "    query: SELECT \n",
       "    l.sigungu,\n",
       "    r.building_name, \n",
-      "    rt.monthly_rent as \"월세(만원)\",\n",
+      "    s.price as \"가격(만원)\",\n",
       "    r.exclusive_area as \"전용면적(㎡)\"\n",
-      "FROM rental_transaction rt\n",
-      "JOIN real_estate_info r ON rt.property_id = r.property_id\n",
+      "FROM sale_transaction s\n",
+      "JOIN real_estate_info r ON s.property_id = r.property_id\n",
       "JOIN location l ON r.location_id = l.location_id\n",
-      "WHERE l.sigungu LIKE '%금천구%'\n",
-      "AND rt.rental_type = '월세'\n",
-      "AND CAST(REPLACE(rt.monthly_rent, ',', '') AS DECIMAL) <= 50;\n",
+      "WHERE l.sigungu LIKE '%강남구%'\n",
+      "ORDER BY s.price ASC\n",
+      "LIMIT 5;\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: sql_db_query\n",
       "\n",
-      "[('금천구', '', 20, 82.68), ('금천구', '', 35, 23), ('금천구', '', 35, 25), ('금천구', '', 10, 65.12), ('금천구', '', 30, 20), ('금천구', '', 50, 50), ('금천구', '', 20, 30), ('금천구', '', 22, 10), ('금천구', '', 38, 19), ('금천구', '', 50, 44.61), ('금천구', '', 34, 15), ('금천구', '', 30, 20), ('금천구', '', 20, 25), ('금천구', '', 30, 29.72), ('금천구', '', 27, 15.7), ('금천구', '', 40, 39.6), ('금천구', '', 40, 19.02), ('금천구', '', 50, 47.43), ('금천구', '', 40, 33.05), ('금천구', '', 40, 30), ('금천구', '', 15, 43.38), ('금천구', '', 20, 20.05), ('금천구', '', 47, 18), ('금천구', '', 20, 84.42), ('금천구', '', 40, 16), ('금천구', '', 35, 17), ('금천구', '', 37, 18), ('금천구', '', 10, 20.19), ('금천구', '', 35, 25), ('금천구', '', 45, 19.8), ('금천구', '', 38, 18), ('금천구', '', 30, 26), ('금천구', '', 35, 30), ('금천구', '', 35, 13.2), ('금천구', '', 50, 35), ('금천구', '', 25, 20), ('금천구', '', 4, 19), ('금천구', '', 25, 20.59), ('금천구', '', 43, 20.19), ('금천구', '', 35, 15), ('금천구', '', 48, 18), ('금천구', '', 27, 17), ('금천구', '', 32, 20), ('금천구', '', 36, 20), ('금천구', '', 30, 23), ('금천구', '', 30, 19), ('금천구', '', 35, 39.4), ('금천구', '', 20, 20), ('금천구', '', 45, 33), ('금천구', '', 40, 36.3), ('금천구', '', 40, 17), ('금천구', '', 40, 36.3), ('금천구', '', 5, 60.48), ('금천구', '', 20, 51.03), ('금천구', '', 5, 46.32), ('금천구', '', 35, 27), ('금천구', '', 45, 28.87), ('금천구', '', 25, 19.8), ('금천구', '', 30, 13), ('금천구', '', 48, 30), ('금천구', '', 47, 18), ('금천구', '', 48, 30), ('금천구', '', 40, 35), ('금천구', '', 20, 20), ('금천구', '', 20, 16.5), ('금천구', '', 34, 15), ('금천구', '', 50, 33), ('금천구', '', 25, 43.8), ('금천구', '', 30, 25), ('금천구', '', 35, 35.4), ('금천구', '', 25, 20), ('금천구', '', 20, 25), ('금천구', '', 40, 20), ('금천구', '', 30, 20), ('금천구', '', 40, 30), ('금천구', '', 40, 20), ('금천구', '', 20, 39.91), ('금천구', '', 15, 24), ('금천구', '', 34, 28), ('금천구', '', 50, 16), ('금천구', '', 44, 15), ('금천구', '', 44, 15), ('금천구', '', 20, 20), ('금천구', '', 35, 30), ('금천구', '', 40, 20), ('금천구', '', 40, 30), ('금천구', '', 50, 30), ('금천구', '', 40, 40), ('금천구', '', 50, 59.49), ('금천구', '', 15, 32.95), ('금천구', '', 50, 17), ('금천구', '', 40, 36), ('금천구', '', 25, 26.44), ('금천구', '', 42, 15), ('금천구', '', 30, 25), ('금천구', '', 50, 164.1), ('금천구', '', 50, 37), ('금천구', '', 25, 25), ('금천구', '아이유하임', 41, 29.0615), ('금천구', '아이유하임', 41, 29.0615), ('금천구', '아이유하임', 40, 29.0615), ('금천구', '가산지웰에스테이트2차', 33, 14.12), ('금천구', '계룡아파트', 10, 59.34), ('금천구', '벽산', 14, 32.7), ('금천구', '가산지웰에스테이트2차', 20, 14.12), ('금천구', '진도1차', 20, 59.94), ('금천구', '무지개', 45, 53.75), ('금천구', '가산지웰에스테이트2차', 20, 14.94), ('금천구', 'G밸리페트라힐스', 9, 13.76), ('금천구', '삼익', 7, 84.96), ('금천구', '가산지웰에스테이트2차', 39, 14.12), ('금천구', '명도힐스티지', 32, 29.63), ('금천구', '시흥목련', 11, 28.95), ('금천구', '골드리버', 50, 16.61), ('금천구', '무지개', 35, 53.75), ('금천구', '씨앤에스타워', 16, 26.19), ('금천구', '한신아파트', 20, 129.66), ('금천구', '벽산', 8, 32.7), ('금천구', '관악산벽산타운5', 8, 59.34), ('금천구', '가산양우내안에애플', 40, 12.04), ('금천구', '더유엘아파트', 15, 58.8077), ('금천구', '골드리버', 30, 16.87), ('금천구', '독산역롯데캐슬', 50, 59.799), ('금천구', '리버빌러티', 20, 29.87), ('금천구', '더블레스제이', 10, 25.38), ('금천구', '메트로타운(47-28)', 10, 28.79), ('금천구', '서전하우스(1006-143)', 31, 24.61), ('금천구', '서전하우스(1006-143)', 28, 23.1), ('금천구', '현대힐타운(1006-64)', 20, 29.58), ('금천구', '은슬림10', 22, 19.18), ('금천구', '엠제트하우스', 35, 27.26), ('금천구', '엠제트하우스', 24, 27.04), ('금천구', '서전하우스(1006-143)', 32, 26.31), ('금천구', '새롬빌', 25, 66), ('금천구', '이성Hills', 50, 14.43), ('금천구', '미림A-클래스', 15, 29.69), ('금천구', '(광진빌라)', 40, 52.07), ('금천구', '베니스(149-50)', 50, 12.74), ('금천구', '다인빌', 50, 24.24), ('금천구', '골드클래스', 20, 25.68), ('금천구', '리베라움', 15, 29.31), ('금천구', '리베라움', 15, 29.31), ('금천구', '형제파크빌라', 30, 67.02), ('금천구', '더더블유서울', 18, 20.56), ('금천구', '더블루스테이', 23, 29.25), ('금천구', '엘린하우스2', 35, 53.35), ('금천구', '베니스(149-50)', 50, 12.09), ('금천구', '(140-78)', 7, 18.23), ('금천구', '엘리체(960-11)', 10, 21.99), ('금천구', '엘리체(960-11)', 10, 21.99), ('금천구', 'MK.TOWER', 21, 16.75), ('금천구', '해강하우스II', 28, 27.31), ('금천구', '(3-168)', 50, 80.99), ('금천구', '라온복합건물', 20, 17.44), ('금천구', '가산동148-57도시형생활주택가동나동', 10, 40.18), ('금천구', '가산동148-55도시형생활주택', 10, 37.95), ('금천구', '광진아람아트빌3차', 22, 47.23), ('금천구', '금나래빌', 35, 24.18), ('금천구', '금나래빌', 35, 24.18), ('금천구', '팰리스타운', 7, 29.03), ('금천구', '휴먼에코빌4차A동B동', 20, 54.52), ('금천구', '팰리스타운', 16, 27.08), ('금천구', '화담빌A', 20, 38.94), ('금천구', '현대힐타운(378-35)', 10, 37.67), ('금천구', '애경마인드', 10, 27.57), ('금천구', '라온복합건물', 15, 17.44), ('금천구', '스위트빌B동(851-29)', 24, 61.67), ('금천구', '가산센트럴 푸르지오시티', 25, 17.62), ('금천구', '엠제트하우스', 35, 28.95), ('금천구', '엠제트하우스', 34, 27.97), ('금천구', '시흥 사거리 와이즈 플레이스', 10, 18.25), ('금천구', '가산센트럴 푸르지오시티', 21, 17.62), ('금천구', '금천 롯데캐슬 골드파크 4차', 15, 24.21), ('금천구', '센트로힐', 7, 33.31), ('금천구', '수아주 신독산', 48, 16.83), ('금천구', '가산 미소지움', 45, 16.63), ('금천구', '가산센트럴 푸르지오시티', 21, 17.62), ('금천구', '삼부르네상스플러스', 50, 18.81), ('금천구', '수아주 신독산', 30, 16.83), ('금천구', 'G밸리 하우스디 어반', 40, 19.64), ('금천구', 'G밸리 하우스디 어반', 10, 19.37), ('금천구', '보성빌딩', 30, 29.39), ('금천구', '가산유미어스오피스텔', 9, 17.16), ('금천구', '유원블리스', 5, 23.82), ('금천구', '우정오피스텔', 11, 24.2), ('금천구', '아네스트오피스텔', 13, 17.24), ('금천구', 'G밸리 하우스디 어반', 15, 19.37), ('금천구', '대명 U타운', 50, 17.29), ('금천구', '해송빌딩', 46, 14.79), ('금천구', '가산글로벌퍼스트', 15, 28.5), ('금천구', '아크로타워Ⅱ', 10, 22.22), ('금천구', '대명 U타운', 45, 17.29), ('금천구', '가산센트럴 푸르지오시티', 6, 17.62), ('금천구', '우정오피스텔', 5, 24.2), ('금천구', '(882-15)', 39, 13.16), ('금천구', '해송빌딩', 50, 14.79), ('금천구', 'e편한세상 독산 더타워', 15, 26.74), ('금천구', 'e편한세상 독산 더타워', 5, 26.22), ('금천구', '메트로 21', 5, 29.32), ('금천구', '유헌오피스텔', 32, 27.34), ('금천구', '동우오피스텔', 14, 29.79), ('금천구', '동우오피스텔', 15, 29.98), ('금천구', '대명 U타운', 45, 17.81), ('금천구', '금천리메인시티', 7, 20.92), ('금천구', '대명 U타운', 45, 17.4), ('금천구', '산들파크빌6', 50, 31.95), ('금천구', '가산대명벨리온', 3, 16.61), ('금천구', '가산대명벨리온', 3, 16.61), ('금천구', 'e편한세상 독산 더타워', 38, 26.22), ('금천구', '세움아트빌3차 B동', 11, 24.77), ('금천구', '디밸리', 5, 20.11), ('금천구', '가산센트럴 푸르지오시티', 11, 17.62), ('금천구', '가산대명벨리온', 16, 16.61), ('금천구', '가산대명벨리온', 15, 16.61), ('금천구', 'G밸리 하우스디 어반', 30, 19.37), ('금천구', '삼부르네상스플러스', 33, 20.31), ('금천구', '수아주 신독산', 25, 16.83)]\n",
+      "[('강남구', '까치마을', '102,000', 39.6), ('강남구', '강남자곡 힐스테이트', '118,500', 74.8), ('강남구', '신동아', '119,500', 39.53), ('강남구', '까치마을', '120,000', 49.5), ('강남구', '까치마을', '131,000', 49.5)]\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
-      "금천구에서 월세 50만원 이하의 추천 매물은 다음과 같습니다:\n",
+      "강남구의 저렴한 집값 정보를 아래와 같이 추천합니다:\n",
       "\n",
-      "1. **건물명**: (정보 없음)\n",
-      "   - **월세(만원)**: 20\n",
-      "   - **전용면적(㎡)**: 82.68\n",
+      "1. **건물 이름**: 까치마을\n",
+      "   - **가격(만원)**: 102,000\n",
+      "   - **전용면적(㎡)**: 39.6\n",
       "\n",
-      "2. **건물명**: (정보 없음)\n",
-      "   - **월세(만원)**: 35\n",
-      "   - **전용면적(㎡)**: 23\n",
+      "2. **건물 이름**: 강남자곡 힐스테이트\n",
+      "   - **가격(만원)**: 118,500\n",
+      "   - **전용면적(㎡)**: 74.8\n",
       "\n",
-      "3. **건물명**: (정보 없음)\n",
-      "   - **월세(만원)**: 35\n",
-      "   - **전용면적(㎡)**: 25\n",
+      "3. **건물 이름**: 신동아\n",
+      "   - **가격(만원)**: 119,500\n",
+      "   - **전용면적(㎡)**: 39.53\n",
       "\n",
-      "4. **건물명**: (정보 없음)\n",
-      "   - **월세(만원)**: 10\n",
-      "   - **전용면적(㎡)**: 65.12\n",
+      "4. **건물 이름**: 까치마을\n",
+      "   - **가격(만원)**: 120,000\n",
+      "   - **전용면적(㎡)**: 49.5\n",
       "\n",
-      "5. **건물명**: (정보 없음)\n",
-      "   - **월세(만원)**: 30\n",
-      "   - **전용면적(㎡)**: 20\n",
+      "5. **건물 이름**: 까치마을\n",
+      "   - **가격(만원)**: 131,000\n",
+      "   - **전용면적(㎡)**: 49.5\n",
       "\n",
-      "이 매물들은 건물명이 제공되지 않았습니다. 추가 정보가 필요하시면 말씀해 주세요!\n"
+      "추천한 매물 중에서 가격이 저렴한 순서로 나열하였습니다. 필요한 추가 정보가 있다면 말씀해 주세요!\n"
      ]
     }
    ],
@@ -325,6 +460,7 @@
     "            events = agent_executor.stream(\n",
     "                {\"messages\": [(\"user\", question)]},\n",
     "                config={\"recursion_limit\": 50},\n",
+    "                \n",
     "                stream_mode=\"values\",\n",
     "            )\n",
     "\n",
