--- a/LangGraph.ipynb
+++ b/LangGraph.ipynb
@@ -24,10 +24,11 @@
     }
    ],
    "source": [
-    "from langsmith import Client\n",
     "from dotenv import load_dotenv\n",
-    "client = Client()\n",
-    "load_dotenv()"
+    "from langsmith import Client\n",
+    "\n",
+    "load_dotenv()\n",
+    "client = Client()"
    ]
   },
   {
