--- a/LangGraph.ipynb
+++ b/LangGraph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,16 +458,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x280e1ff9390>"
+       "<langgraph.graph.state.StateGraph at 0x20304ae3c10>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,55 +491,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_5852\\1072432361.py:19: LangChainDeprecationWarning: The method `BaseChatModel.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  response = llm(messages=[{\"role\": \"system\", \"content\": prompt}])\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "=================================\n",
+      "[re_questions] 질문이 부동산 관련이 아니거나 제대로 인식되지 않았습니다.\n",
+      "=================================\n",
       "```json\n",
       "{\n",
       "  \"properties\": [\n",
       "    {\n",
-      "      \"location\": \"강남구\",\n",
-      "      \"description\": null,\n",
-      "      \"price\": 360000,\n",
-      "      \"latitude\": 37.4931444,\n",
-      "      \"longitude\": 127.0590787\n",
+      "      \"location\": \"서초구\",\n",
+      "      \"description\": \"입주는 2월 25일 환영합니다~~ 전세대출가능합니다\",\n",
+      "      \"price\": 38000,\n",
+      "      \"latitude\": 37.474561,\n",
+      "      \"longitude\": 127.0470436\n",
       "    },\n",
       "    {\n",
-      "      \"location\": \"강남구\",\n",
-      "      \"description\": \"♡ since 2003년 미 노출중인 A급 매물 다수 보유 중\\n♣ 같은자리 20년이상 경력과 신뢰를 바탕으로 고객님 니즈에 맞춰서 최적의 컨설팅을 해드립니다.\\n\\n☎  02  576  7489     010  5162  7489  새롬 공인중개사사무소 (포이초등학교앞)\\n\\n-------------\\n\\n[매물정보] ---- 다양한 조건에 맞춰서 최대한 협의 가능합니다.!!!\\n\\n▶ 지하1층~지상4층 현재 집회및 문화시설로 되어있지만 올근생으로 변경가능\\n★ 국악고 및 양재ic인근 외부 진출입 편리한 위치\\n★ 개발...\",\n",
-      "      \"price\": 780000,\n",
-      "      \"latitude\": 37.4751819,\n",
-      "      \"longitude\": 127.0529911\n",
+      "      \"location\": \"서초구\",\n",
+      "      \"description\": \"★ 매물정보 ★\\n\\n▣ 금 액 : 보증금 20,000만원 / 관리비 15,000만원\\n▣ 면 적 : 약 16.5평\\n▣ 주 차 : 선착순 무료주차1대\\n▣ 위 치 : 국악고사거리 인근\\n▣ 층 수 : -1 / 4층\\n▣ 입 주 : 협의입주\\n▣ 구 조 : 룸3 + 화장실1 \\n\\n♣ 특 징 \\n\\n▶ 올수리 되어 깔끔한 반지하 쓰리룸 매물\\n▶ 도보3분거리 버스정유장 있어 교통편리\\n▶ 조용한 주택가로 주변 편의시설 잘 갖추어져 생활 편리함\\n\\n★ 부동산소개 ★\\n\\n직접 방문하여 촬영한 실매물...\",\n",
+      "      \"price\": 20000,\n",
+      "      \"latitude\": 37.4715239,\n",
+      "      \"longitude\": 127.0479878\n",
       "    },\n",
       "    {\n",
-      "      \"location\": \"강남구\",\n",
-      "      \"description\": \"♥ 같은자리 20년 경력만큼 미 노출중인 물건 다수 보유중이니 문의주시면 마음에 꼭 드시는 물건으로 보답하겠습니다 ♥\\n♧새롬공인중개사사무소(포이초등학교앞))/ {매수,매도,갭투자 문의환영}\\n\\n☎ 02 576 7489     010 5162 7489 [편리한 문자 문의 가능]\\n=================\\n\\n[매물특징]\\n\\n★ 강남 입성의 마지막 기회 개포동 4동 재개발!!!\\n+개포동의 입지 가치와 그동안 개발을 막아왔던 각종 규제가 해제되면서 구룡마을 등을 포함한\\n  개포동은 대규모 개발이 가능한 강남구...\",\n",
-      "      \"price\": 330000,\n",
-      "      \"latitude\": 37.4751819,\n",
-      "      \"longitude\": 127.0529911\n",
+      "      \"location\": \"서초구\",\n",
+      "      \"description\": \"양재시민의숲역 도보 12분거리에 위치한 투룸입니다\\n\\n내부 신축급으로 올리모델링 되어있습니다.(빠른 계약 예상)\\n\\n금액대비 평수도 넓게 잘 나온 집입니다.\\n\\n전세자금대출 및 보증보험 가능!\\n\\n주차 자리가 매우 협소합니다. 가급적 차 없는 분에게 추천드립니다.\",\n",
+      "      \"price\": 25000,\n",
+      "      \"latitude\": 37.4694135,\n",
+      "      \"longitude\": 127.0451853\n",
       "    },\n",
       "    {\n",
-      "      \"location\": \"강남구\",\n",
-      "      \"description\": null,\n",
-      "      \"price\": 470000,\n",
-      "      \"latitude\": 37.4931444,\n",
-      "      \"longitude\": 127.0590787\n",
+      "      \"location\": \"서초구\",\n",
+      "      \"description\": \"ㅁ  미닫이 있는 투룸\\n\\nㅁ  주차는 선착순입니다\\n\\nㅁ  교통좋은 위치입니다\",\n",
+      "      \"price\": 23000,\n",
+      "      \"latitude\": 37.4732135,\n",
+      "      \"longitude\": 127.042293\n",
       "    },\n",
       "    {\n",
-      "      \"location\": \"강남구\",\n",
-      "      \"description\": null,\n",
-      "      \"price\": 307000,\n",
-      "      \"latitude\": 37.4931444,\n",
-      "      \"longitude\": 127.0590787\n",
+      "      \"location\": \"서초구\",\n",
+      "      \"description\": \"🥇연속1️위🥇채광 구조 깔끔 역세권 쓰리룸📢이방주목📢\\n\\n중기청 / 버팀목 / 카카오 / HUG, HF, SGI 모든 대출, 보증보험// 설명, 안내 도와드립니다//\\n대출에 대해서 잘 모르시는 사회 초년생 손님분들위해서 대출 설명, 비교해드리고 있습니다!\\n보증보험 및 정확한 권리분석 안내로 임차인들의 보증금의 안전을 약속드립니다.\\n\\n❤️ 방 상세설명 ❤️\\n✨직접 촬영한 100% 실매물입니다✨\\n\\n✔ 제가 살고 싶은 집들 엄선해서 광고 중입니다\\n✔ 절대적으로 안전한 매물만 중개해요 😊 \\n\\n✅ 에어비앤비 매물문의 사절❗\",\n",
+      "      \"price\": 28000,\n",
+      "      \"latitude\": 37.4775715,\n",
+      "      \"longitude\": 126.9590793\n",
       "    }\n",
       "  ]\n",
       "}\n",
       "```\n",
-      "{'real_estate_type': '매매', 'questions': '강남 10억 매매', 'query': 'SELECT \\n  pl.sigungu,\\n  pi.description,\\n  CAST(REPLACE(ps.price, \\',\\', \\'\\') AS INTEGER) AS \"금액(만원)\",\\n  pl.latitude,\\n  pl.longitude\\nFROM property_sales ps\\nJOIN property_info pi ON ps.property_id = pi.property_id\\nJOIN property_locations pl ON pi.location_id = pl.location_id\\nWHERE pl.sigungu LIKE \\'%강남구%\\'\\nAND CAST(REPLACE(ps.price, \\',\\', \\'\\') AS INTEGER) <= 1000000\\nLIMIT 5;', 'results': \"[('강남구', None, 360000, 37.4931444, 127.0590787), ('강남구', '♡ since 2003년 미 노출중인 A급 매물 다수 보유 중\\\\r\\\\n♣ 같은자리 20년이상 경력과 신뢰를 바탕으로 고객님 니즈에 맞춰서 최적의 컨설팅을 해드립니다.\\\\r\\\\n\\\\r\\\\n☎  02  576  7489     010  5162  7489  새롬 공인중개사사무소 (포이초등학교앞)\\\\r\\\\n\\\\r\\\\n-------------\\\\r\\\\n\\\\r\\\\n[매물정보] ---- 다양한 조건에 맞춰서 최대한 협의 가능합니다.!!!\\\\r\\\\n\\\\r\\\\n▶ 지하1층~지상4층 현재 집회및 문화시설로 되어있지만 올근생으로 변경가능\\\\r\\\\n★ 국악고 및 양재ic인근 외부 진출입 편리한 위치\\\\r\\\\n★ 개발...', 780000, 37.4751819, 127.0529911), ('강남구', '♥ 같은자리 20년 경력만큼 미 노출중인 물건 다수 보유중이니 문의주시면 마음에 꼭 드시는 물건으로 보답하겠습니다 ♥\\\\r\\\\n♧새롬공인중개사사무소(포이초등학교앞))/ {매수,매도,갭투자 문의환영}\\\\r\\\\n\\\\r\\\\n☎ 02 576 7489     010 5162 7489 [편리한 문자 문의 가능]\\\\r\\\\n=================\\\\r\\\\n\\\\r\\\\n[매물특징]\\\\r\\\\n\\\\r\\\\n★ 강남 입성의 마지막 기회 개포동 4동 재개발!!!\\\\r\\\\n+개포동의 입지 가치와 그동안 개발을 막아왔던 각종 규제가 해제되면서 구룡마을 등을 포함한\\\\r\\\\n  개포동은 대규모 개발이 가능한 강남구...', 330000, 37.4751819, 127.0529911), ('강남구', None, 470000, 37.4931444, 127.0590787), ('강남구', None, 307000, 37.4931444, 127.0590787)]\"}\n"
+      "{'real_estate_type': '전월세', 'questions': '서초구 5억 전세', 'query': 'SELECT \\n    pl.sigungu,\\n    pi.description,\\n    pr.deposit AS \"보증금(만원)\",\\n    pl.latitude,\\n    pl.longitude\\nFROM property_rentals pr\\nJOIN property_info pi ON pr.property_id = pi.property_id\\nJOIN property_locations pl ON pi.location_id = pl.location_id\\nWHERE pl.sigungu LIKE \\'%서초구%\\'\\nAND pr.rental_type = \\'30051B1\\'\\nAND CAST(REPLACE(pr.deposit, \\',\\', \\'\\') AS INTEGER) <= 50000\\nLIMIT 5;', 'results': \"[('서초구', '입주는 2월25일 환영합니다~~ 전세대출가능합니다', 38000, 37.474561, 127.0470436), ('서초구', '★ 매물정보 ★\\\\r\\\\n\\\\r\\\\n▣ 금 액 : 보증금 20,000만원 / 관리비 15,000만원\\\\r\\\\n▣ 면 적 : 약 16.5평\\\\r\\\\n▣ 주 차 : 선착순 무료주차1대\\\\r\\\\n▣ 위 치 : 국악고사거리 인근\\\\r\\\\n▣ 층 수 : -1 / 4층\\\\r\\\\n▣ 입 주 : 협의입주\\\\r\\\\n▣ 구 조 : 룸3 + 화장실1 \\\\r\\\\n\\\\r\\\\n♣ 특 징 \\\\r\\\\n\\\\r\\\\n▶ 올수리 되어 깔끔한 반지하 쓰리룸 매물\\\\r\\\\n▶ 도보3분거리 버스정유장 있어 교통편리\\\\r\\\\n▶ 조용한 주택가로 주변 편의시설 잘 갖추어져 생활 편리함\\\\r\\\\n             \\\\r\\\\n★ 부동산소개 ★\\\\r\\\\n\\\\r\\\\n직접 방문하여 촬영한 실매물...', 20000, 37.4715239, 127.0479878), ('서초구', '양재시민의숲역 도보 12분거리에 위치한 투룸입니다\\\\r\\\\n\\\\r\\\\n내부 신축급으로 올리모델링 되어있습니다.(빠른 계약 예상)\\\\r\\\\n\\\\r\\\\n금액대비 평수도 넓게 잘 나온 집입니다.\\\\r\\\\n\\\\r\\\\n전세자금대출 및 보증보험 가능!\\\\r\\\\n\\\\r\\\\n주차 자리가 매우 협소합니다. 가급적 차 없는 분에게 추천드립니다.', 25000, 37.4694135, 127.0451853), ('서초구', 'ㅁ  미닫이 있는 투룸\\\\r\\\\n\\\\r\\\\nㅁ  주차는 선착순입니다\\\\r\\\\n\\\\r\\\\nㅁ  교통좋은 위치입니다', 23000, 37.4732135, 127.042293), ('서초구', '🥇연속1️위🥇채광 구조 깔끔 역세권 쓰리룸📢이방주목📢\\\\r\\\\n\\\\r\\\\n중기청 / 버팀목 / 카카오 /HUG,HF,SGI 모든 대출,보증보험//설명,안내 도와드립니다//\\\\r\\\\n대출에 대해서 잘 모르시는 사회 초년생 손님분들위해서 대출 설명,비교해드리고 있습니다!\\\\r\\\\n보증보험 및 정확한 권리분석 안내로 임차인들의 보증금의 안전을 약속드립니다.\\\\r\\\\n\\\\r\\\\n❤️ 방 상세설명 ❤️\\\\r\\\\n✨직접 촬영한 100% 실매물입니다✨\\\\r\\\\n\\\\r\\\\n✔ 제가 살고 싶은 집들 엄선해서 광고 중입니다\\\\r\\\\n✔ 절대적으로 안전한 매물만 중개해요 😊 \\\\r\\\\n\\\\r\\\\n✅ 에어비앤비 매물문의 사절❗...', 28000, 37.4775715, 126.9590793)]\"}\n"
      ]
     },
     {
@@ -588,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -596,16 +607,17 @@
      "output_type": "stream",
      "text": [
       "SELECT \n",
-      "  pl.sigungu,\n",
-      "  pi.description,\n",
-      "  CAST(REPLACE(ps.price, ',', '') AS INTEGER) AS \"금액(만원)\",\n",
-      "  pl.latitude,\n",
-      "  pl.longitude\n",
-      "FROM property_sales ps\n",
-      "JOIN property_info pi ON ps.property_id = pi.property_id\n",
+      "    pl.sigungu,\n",
+      "    pi.description,\n",
+      "    pr.deposit AS \"보증금(만원)\",\n",
+      "    pl.latitude,\n",
+      "    pl.longitude\n",
+      "FROM property_rentals pr\n",
+      "JOIN property_info pi ON pr.property_id = pi.property_id\n",
       "JOIN property_locations pl ON pi.location_id = pl.location_id\n",
-      "WHERE pl.sigungu LIKE '%강남구%'\n",
-      "AND CAST(REPLACE(ps.price, ',', '') AS INTEGER) <= 1000000\n",
+      "WHERE pl.sigungu LIKE '%서초구%'\n",
+      "AND pr.rental_type = '30051B1'\n",
+      "AND CAST(REPLACE(pr.deposit, ',', '') AS INTEGER) <= 50000\n",
       "LIMIT 5;\n"
      ]
     }
@@ -616,14 +628,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "추출된 데이터: {'지역': '강남', '가격': '없음', '거래유형': '없음'}\n"
+      "추출된 데이터: {'지역': '없음', '가격': '없음', '거래유형': '없음'}\n"
      ]
     }
    ],
